feat: search-type